--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7618,12 +7618,18 @@ section {
 .console {
   background: url(../images/MacBook-Pro-mockup.png) no-repeat left center;
   height: 448px;
+  padding-top: 25px;
   position: relative;
 }
 .console .console-inner {
   padding: 30px 85px 30px 95px;
   text-align: left;
   font-family: "Lucida Console";
+  max-height: 390px;
+  overflow: auto;
+}
+.console .console-inner::-webkit-scrollbar {
+  display: none;
 }
 .console .console-inner p {
   font-size: 12px;
