--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7417,7 +7417,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: #ffffff;
-  background: url(../images/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../images/Arrière-plan.png) no-repeat bottom center scroll;
   background-color: #000000;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -7615,6 +7615,29 @@ section {
   float: right;
   margin-top: 40%;
 }
+#gruntfile .page-scroll {
+  float: right;
+}
+#start ol {
+  text-align: left;
+}
+#start .page-scroll {
+  float: right;
+  margin-top: 150px;
+}
+#plugins .icon {
+  float: left;
+  margin-left: 5px;
+}
+#plugins #plugin-sprite {
+  display: none;
+}
+#plugins #plugin-jshint {
+  display: none;
+}
+#plugins #plugin-svg {
+  display: none;
+}
 .console {
   background: url(../images/MacBook-Pro-mockup.png) no-repeat left center;
   height: 448px;
@@ -7622,10 +7645,10 @@ section {
   position: relative;
 }
 .console .console-inner {
-  padding: 30px 85px 30px 95px;
+  padding: 0px 85px 30px 95px;
   text-align: left;
   font-family: "Lucida Console";
-  max-height: 390px;
+  max-height: 365px;
   overflow: auto;
 }
 .console .console-inner::-webkit-scrollbar {
